# MeshiLens

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  vercel.json
api/: index.py
extension/: advice.js  background.js  cache.js  category.js  content.css  content.js  japan.js  list_badges.js  manifest.json  maps.js  popup.css  popup.html  popup.js  review_insights.js  runtime.js  settings.js  timeline.js  ui_mode.js
scripts/: update_michelin.py
src/meshi_lens/: __init__.py  advice.py  cache.py  japan.py  matching.py  michelin.py  provider.py  review_insights.py  server.py  service.py
src/meshi_lens/data/: michelin-japan.json
tests/: test_advice.js  test_advice.py  test_cache.py  test_category.js  test_japan.js  test_list_badges.js  test_lookup_cache.js  test_maps.js  test_matching.py  test_michelin.py  test_provider.py  test_review_insights.js  test_review_insights.py  test_runtime.js  test_service.py  test_settings.js  test_timeline.js  test_toggle.js  test_ui_mode.js
tests/fixtures/: tabelog_review_list.html  tabelog_review_list_empty.html
