[project]
name = "meshilens"
version = "0.3.7"
description = "Show Tabelog ratings, reservations, payment methods, and restaurant details in Google Maps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gurume>=0.0.12,<0.1",
]

[project.scripts]
meshilens-server = "meshi_lens.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meshi_lens"]
