[project]
name = "meshilens"
version = "0.4.9"
description = "Show Tabelog ratings and Michelin Guide Japan distinctions in Google Maps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gurume>=0.0.12,<0.1",
]

[project.scripts]
meshilens-server = "meshi_lens.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meshi_lens"]
artifacts = ["src/meshi_lens/data/*.json"]
